--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,14 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
     font-family: "Raleway", sans-serif
 }
 
 body,
 html {
+    color: white;
     height: 100%;
     line-height: 1.8;
 }
