--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,14 @@ html {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    color: #fff;
     display: block;
     transition: 0.3s;
 }
 
 .overlay a:hover,
 .overlay a:focus {
-    color: #f1f1f1;
+    color: #818181;
 }
 
 .overlay .closebtn {
