--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,17 @@ html {
     line-height: 1.8;
 }
 
+/* HEADER */
+.headercontainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    /* or inline-flex */
+}
+
 .navButton {
-    /* order: 0; */
+    order: 0;
     position: relative;
     text-align: left;
     margin-top: 30px;
@@ -37,23 +46,17 @@ html {
     padding-bottom: 0px;
 }
 
-.logo{
-    text-align: center;
+.logo {
+    order: 1;
 }
 
 #myLogo {
-    display: inline-block;
-    width: 10%;
-    height: 10%;
-    /* left: 0px;
-    right: 0px; */
+    width: 250px;
+    height: 250px;
 }
 
-/* FLEXBOX */
-.headercontainer {
-    /* display: flex;
-    justify-content: flex; */
-    /* or inline-flex */
+.headerplaceholder {
+    order: 2;
 }
 
 /* BURGER MENU OVERLAY */
