--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ html {
 
 /* HEADER*/
 .headercontainer {
+    padding-left: 00%;
+    padding-right: 0%;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -55,8 +57,8 @@ html {
 }
 
 #myLogo {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
 }
 
 /* .headerplaceholder {
