--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 /* GENERAL */
-* {
-    background: #000;
-}
-
 .main-header {
     border-bottom: 3px solid white;
+}
+
+body {
+    background: rgb(191,51,255);
+background: linear-gradient(166deg, rgba(191,51,255,1) 0%, rgba(16,46,82,1) 41%, rgba(0,0,0,1) 66%);
 }
 
 body,
@@ -85,7 +86,7 @@ html {
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0);
-    /* background-color: rgba(0, 0, 0, 0.9); */
+    background-color: rgba(0, 0, 0, 0.9);
     overflow-x: hidden;
     transition: 0.5s;
 }
