--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
-    background: rgb(191,51,255);
-background: linear-gradient(166deg, rgba(191,51,255,1) 0%, rgba(16,46,82,1) 41%, rgba(0,0,0,1) 66%);
+    overflow: hidden;
+    background: rgb(191, 51, 255);
+    background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%);
 }
 
 body,
