--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ iframe {
 
 /* HEADER____________________________________________________________________________________________________________*/
 header {
-    border-bottom: 2.5px white solid;
+    border-bottom: 2.5px rgba(255, 255, 255, 0.25) solid;
 }
 
 .headercontainer {
@@ -106,7 +106,7 @@ header {
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.5);
     overflow-x: hidden;
     transition: 0.5s;
 }
