--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* GENERAL____________________________________________________________________________________________________________ */
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     background: blue;
     /* background: rgb(191, 51, 255);
      background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
@@ -44,16 +44,10 @@ html {
     flex-direction: column;
 }
 
-/* make canvas as background? ¯\_(ツ)_/¯
-iframe {
-    z-index : -9999;
-    position: absolute;
-    top : 0;
-    left    : 0;
-    width   : 100%;
-    height  : 100%;
-    margin  : 0;
-    padding : 0;} */
+/* hide scrollbar(but allow scrolling) in Google Chrome */
+::-webkit-scrollbar {
+    display: none;
+}
 
 /* HEADER____________________________________________________________________________________________________________*/
 header {
