--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,17 @@ body {
      background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
 }
 
+/* canvas as bg, comment to enable OrbitControls for interactive visuals*/
+canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -9999;
+  }
+
 body,
 h1,
 h2,
