--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 /* canvas as bg, comment to enable OrbitControls for interactive visuals*/
-canvas {
+/* canvas {
     width: 100vw;
     height: 100vh;
     display: block;
@@ -15,7 +15,7 @@ canvas {
     top: 0;
     left: 0;
     z-index: -9999;
-  }
+  } */
 
 body,
 h1,
@@ -111,8 +111,8 @@ header {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.5);
     overflow-x: hidden;
     transition: 0.5s;
 }
