--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,16 @@ body {
      background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
 }
 
+iframe {
+    z-index: -9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 /* canvas as bg, comment to enable OrbitControls for interactive visuals*/
 /* canvas {
     width: 100vw;
