--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ header {
     /* margin-top: 30px; */
     font-size: 35px;
     cursor: pointer;
-    color: white;
+    color: rgba(255, 255, 255, 0.75);
     padding-bottom: 0px;
     transition: all 500ms ease;
 }
