--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,12 @@ html {
 }
 
 .content {
-    /* margin: 7%; */
+    margin-left: 5%;
+    margin-right: 5%;
     padding-right: 10%;
     padding-left: 10%;
     flex-direction: column;
+    /* background-color: #818181; */
 }
 
 /* hide scrollbar(but allow scrolling) in Google Chrome */
