--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ html {
     /* display: flex;
     flex-wrap: wrap;
     justify-content: center; */
+    color: rgba(255, 255, 255, 0.5);
     margin: 25%;
     padding: 0%;
     font-weight: bold;
