--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,17 @@ html {
     align-items: center;
 }
 
-.title {
+#title {
+    font-size: 128px;
+
+    color: rgba(255, 255, 255, 0.5);
+    padding: 50px 10px; /* Some padding */
+    /* margin: 50%; */
     text-align: center;
-    font: italic bold 45px;
+    font-weight: bold;
+    font-style: italic;
+
+    transition: 1s;
 }
 
 .content {
@@ -69,7 +77,7 @@ html {
 
 ::-webkit-scrollbar {
     display: none;
-/* hide scrollbar(but allow scrolling) in Google Chrome */
+    /* hide scrollbar(but allow scrolling) in Google Chrome */
 }
 
 #element {
@@ -105,6 +113,11 @@ header {
     color: rgba(255, 255, 255, 0.5);
     padding-bottom: 0px;
     transition: all 500ms ease;
+}
+
+
+.navButton:hover {
+    color: rgba(255, 255, 255);
 }
 
 .logo {
@@ -149,7 +162,6 @@ header {
     transition: 0.3s;
 }
 
-.navButton:hover,
 .overlay a:hover,
 .overlay a:focus {
     color: #818181;
