--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,24 @@ html {
     scrollbar-width: none;
 }
 
+@keyframes glowing {
+    0% {
+        color: rgba(255, 255, 255, 0.5)
+    }
+
+    40% {
+        color: rgba(255, 255, 255, 1);
+    }
+
+    60% {
+        color: rgba(255, 255, 255, 1);
+    }
+
+    100% {
+        color: rgba(255, 255, 255, 0.5);
+    }
+}
+
 /* HEADER____________________________________________________________________________________________________________*/
 header {
     border-bottom: 2.5px rgba(255, 255, 255, 0.25) solid;
@@ -134,7 +152,8 @@ header {
 
 
 .navButton:hover {
-    color: rgba(255, 255, 255);
+    color: rgba(255, 255, 255, 1);
+    animation: glowing 2500ms infinite;
 }
 
 .logo {
