--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
 body {
     overflow-x: hidden;
     background: blue;
+    animation: rgb 100000ms infinite;
     /* background: rgb(191, 51, 255);
      background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
 }
@@ -128,6 +129,24 @@ article {
 
     100% {
         color: rgba(255, 255, 255, 0.5);
+    }
+}
+
+@keyframes rgb {
+    0% {
+        background: rgba(0, 0, 255)
+    }
+
+    40% {
+        background: rgba(255, 0, 0);
+    }
+
+    60% {
+        background: rgba(255, 0, 255);
+    }
+
+    100% {
+        color: rgba(0, 0, 255);
     }
 }
 
