--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
     overflow-x: hidden;
     background: blue;
-    /* animation: rgb 100000ms infinite; */
+    animation: rgb 100000ms infinite;
     /* background: rgb(191, 51, 255);
      background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
 }
@@ -146,7 +146,7 @@ article {
     }
 
     100% {
-        color: rgb(0, 0, 255);
+        background: rgb(0, 0, 255);
     }
 }
 
