--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@ body {
     overflow-x: hidden;
     background: blue;
     animation: rgb 100000ms infinite;
-    /* background: rgb(191, 51, 255);
-     background: linear-gradient(166deg, rgba(191, 51, 255, 1) 0%, rgba(16, 46, 82, 1) 41%, rgba(0, 0, 0, 1) 66%); */
 }
+
+
 
 iframe {
     z-index: -9999;
@@ -114,6 +114,7 @@ article {
     scrollbar-width: none;
 }
 
+/* KEYFRAMES____________________________________________ */
 @keyframes glowing {
     0% {
         color: rgba(255, 255, 255, 0.5)
@@ -134,19 +135,19 @@ article {
 
 @keyframes rgb {
     0% {
-        background: rgb(0, 0, 255)
+        background: #0000FF;
     }
 
     40% {
-        background: rgb(255, 0, 0);
+        background: #480CE8;
     }
 
     60% {
-        background: rgb(255, 0, 255);
+        background: #910DFF;
     }
 
     100% {
-        background: rgb(0, 0, 255);
+        background: #0000FF;
     }
 }
 
@@ -208,7 +209,7 @@ header {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.75);
     overflow-x: hidden;
-    transition: 0.75s;
+    transition: 0.5s;
 }
 
 .overlay-content {
