--- a/css/style.css
+++ b/css/style.css
@@ -151,11 +151,14 @@ article {
 
 /* HEADER____________________________________________________________________________________________________________*/
 header {
-    border-bottom: 2.5px rgba(255, 255, 255, 0.25) solid;
-    padding-top: 5px;
+    border-bottom: 4px rgb(0, 0, 0) solid;
+    /* padding-top: 5px; */
+    /* position: fixed; */
+    /* width: 100%; */
 }
 
 .headercontainer {
+
     /* Implement static navbar that wouldn't fuckup */
     /* position: fixed; */
     padding-left: 0%;
@@ -197,59 +200,52 @@ header {
 }
 
 /* MENU OVERLAY____________________________________________________________________________________________________________*/
-.overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.75);
-    overflow-x: hidden;
-    transition: 0.5s;
-}
-
-.overlay-content {
-    font-weight: bold;
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-
-}
-
-.overlay a {
-    padding: 8px;
+    background-color: #fff;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 36px;
-    color: #fff;
+    font-size: 25px;
+    color: #000;
     display: block;
     transition: 0.3s;
-}
-
-.overlay a:hover,
-.overlay a:focus {
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
     color: #818181;
-}
-
-.overlay .closebtn {
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
     position: absolute;
-    background-color: transparent;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-    .overlay a {
-        font-size: 20px
-    }
-
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
-}
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
