--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,9 @@
-/* GENERAL____________________________________________________________________________________________________________ */
+/* content styling */
 html {
     scroll-behavior: smooth;
 }
 
-body {
-    overflow-x: hidden;
-    background: blue;
-    animation: rgb 100000ms infinite;
-}
-
+/* iframe as background */
 iframe {
     z-index: -9999;
     top: 0;
@@ -19,7 +14,7 @@ iframe {
     padding: 0;
 }
 
-/* canvas as bg, comment to enable OrbitControls for interactive visuals*/
+/* canvas as background */
 /* canvas {
     width: 100vw;
     height: 100vh;
@@ -29,6 +24,12 @@ iframe {
     left: 0;
     z-index: -9999;
 } */
+
+body {
+    overflow-x: hidden;
+    background: blue;
+    animation: rgb 100000ms infinite;
+}
 
 body,
 h1,
@@ -49,52 +50,32 @@ html {
     line-height: 1.8;
 }
 
+section{padding: 10vw;}
+
 .content {
+    background: rgba(255, 255, 255, 0.25);
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
-    /* align-items: center; */
-}
-
-#title {
-    background: rgba(0, 0, 0, 0.5);
-    font-size: 128px;
-    color: rgba(255, 255, 255, 0.5);
-    /* padding: 50px 10px; */
-    margin-bottom: 0%;
+    margin-top: 0;
     margin-left: 10vw;
     margin-right: 10vw;
-
-    padding-left: 7.5vw;
-    padding-right: 7.5vw;
-
-    /* padding-top: 10%; */
-    /* text-align: center; */
-    font-weight: bold;
-    font-style: italic;
-    transition: 2s;
-}
-
-.content {
-    background: rgba(255, 255, 255, 0.5);
-    margin-top: 0%;
-    margin-left: 10vw;
-    margin-right: 10vw;
-
-    padding-left: 7.5vw;
-    padding-right: 7.5vw;
-    padding-top: 5vw;
-
+    padding-left: 4vw;
+    padding-right: 4vw;
+    padding-top: 2.5vw;
     flex-direction: column;
-
     transition: 2s;
-
     /* background-color: #818181; */
+    /* align-items: center; */
+
 }
 
 .content h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
     font-style: italic;
 }
 
@@ -103,53 +84,29 @@ article {
     margin-bottom: 25px;
 }
 
-::-webkit-scrollbar {
-    display: none;
-    /* hide scrollbar(but allow scrolling) in Google Chrome */
+#title {
+    margin-top: 10vw;
+    background: rgba(0, 0, 0, 0.5);
+    font-size: 128px;
+    /* color: rgba(255, 255, 255, 0.5); */
+    margin-bottom: 0%;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding-left: 7.5vw;
+    padding-right: 7.5vw;
+    font-weight: bold;
+    font-style: italic;
+    transition: 2s;
+    /* padding-top: 10%; */
+    /* text-align: center; */
+    /* padding: 50px 10px; */
 }
 
 #element {
     scrollbar-width: none;
 }
 
-/* KEYFRAMES____________________________________________ */
-@keyframes glowing {
-    0% {
-        color: rgba(255, 255, 255, 0.5)
-    }
-
-    40% {
-        color: rgba(255, 255, 255, 1);
-    }
-
-    60% {
-        color: rgba(255, 255, 255, 1);
-    }
-
-    100% {
-        color: rgba(255, 255, 255, 0.5);
-    }
-}
-
-@keyframes rgb {
-    0% {
-        background: #0000FF;
-    }
-
-    40% {
-        background: #480CE8;
-    }
-
-    60% {
-        background: #910DFF;
-    }
-
-    100% {
-        background: #0000FF;
-    }
-}
-
-/* HEADER____________________________________________________________________________________________________________*/
+/* Header */
 header {
     border-bottom: 4px rgb(0, 0, 0) solid;
     padding-top: 0px;
@@ -160,8 +117,6 @@ header {
 }
 
 .headercontainer {
-
-    /* Implement static navbar that wouldn't fuckup */
     /* position: fixed; */
     padding-left: 0%;
     padding-right: 0%;
@@ -201,53 +156,95 @@ header {
     order: 2;
 }
 
-/* MENU OVERLAY____________________________________________________________________________________________________________*/
+/* Keyframes */
+@keyframes glowing {
+    0% {
+        color: rgba(255, 255, 255, 0.5)
+    }
+
+    40% {
+        color: rgba(255, 255, 255, 1);
+    }
+
+    60% {
+        color: rgba(255, 255, 255, 1);
+    }
+
+    100% {
+        color: rgba(255, 255, 255, 0.5);
+    }
+}
+
+@keyframes rgb {
+    0% {
+        background: #0000FF;
+    }
+
+    40% {
+        background: #480CE8;
+    }
+
+    60% {
+        background: #910DFF;
+    }
+
+    100% {
+        background: #0000FF;
+    }
+}
+
+/* Off-canvas menu */
 /* The side navigation menu */
 .sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    height: 100%;
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     background-color: #fff;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+}
+
+/* The navigation menu links */
+.sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #000;
     display: block;
     transition: 0.3s;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
+}
+
+.sidenav a:hover {
     color: #818181;
-  }
-  
-  /* Position and style the close button (top right corner) */
-  .sidenav .closebtn {
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-  }
-  
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-  #main {
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
     transition: margin-left .5s;
     /* padding: 20px; */
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
+}
