--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,30 @@ html {
     line-height: 1.8;
 }
 
-section{padding: 10vw;}
+section {
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
+    padding: 10vw;
+}
 
 .content {
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
+
     background: rgba(255, 255, 255, 0.25);
     display: flex;
     justify-content: flex-start;
@@ -80,11 +101,31 @@ h6 {
 }
 
 article {
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
+
     margin-top: 25px;
     margin-bottom: 25px;
 }
 
 #title {
+    -webkit-animation: fadein 3s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 3s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 3s;
+    /* Internet Explorer */
+    -o-animation: fadein 3s;
+    /* Opera < 12.1 */
+    animation: fadein 3s;
+    
     margin-top: 10vw;
     background: rgba(0, 0, 0, 0.5);
     font-size: 128px;
@@ -92,8 +133,8 @@ article {
     margin-bottom: 0%;
     margin-left: 10vw;
     margin-right: 10vw;
-    padding-left: 7.5vw;
-    padding-right: 7.5vw;
+    padding-left: 4vw;
+    padding-right: 4vw;
     font-weight: bold;
     font-style: italic;
     transition: 2s;
@@ -157,6 +198,86 @@ header {
 }
 
 /* Keyframes */
+/* Fade in */
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Fade in to right */
+@keyframes fadeintoright {
+    from {
+        opacity: 0;
+        width: 0%;
+    }
+
+    to {
+        opacity: 1;
+        width: 100%
+    }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadeintoright {}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadeintoright {}
+
+/* Internet Explorer */
+@-ms-keyframes fadeintoright {}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeintoright {}
+
 @keyframes glowing {
     0% {
         color: rgba(255, 255, 255, 0.5)
