--- a/style/hamburgers.scss
+++ b/style/hamburgers.scss
@@ -9,12 +9,12 @@
 
 // Settings
 // ==================================================
-$hamburger-padding-x           : 15px !default;
-$hamburger-padding-y           : 15px !default;
-$hamburger-layer-width         : 40px !default;
+$hamburger-padding-x           : 20px !default;
+$hamburger-padding-y           : 30px !default;
+$hamburger-layer-width         : 60px !default;
 $hamburger-layer-height        : 4px !default;
-$hamburger-layer-spacing       : 6px !default;
-$hamburger-layer-color         : #fff !default;
+$hamburger-layer-spacing       : 7px !default;
+$hamburger-layer-color         : rgb(255, 255, 255) !default;
 $hamburger-layer-border-radius : 4px !default;
 $hamburger-hover-opacity       : 0.7 !default;
 $hamburger-active-layer-color  : $hamburger-layer-color !default;
