--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,5 @@
 @import "hamburgers";
+$varWidth: 12.5vw;
 
 /* content styling */
 html {
@@ -33,8 +34,30 @@ iframe {
 
 body {
     overflow-x: hidden;
-    background: blue;
     animation: rgb 100000ms infinite;
+
+    background: linear-gradient(135deg, #0000ff, #ff0000);
+background-size: 400% 400%;
+
+-webkit-animation: AnimationName 30s ease infinite;
+-moz-animation: AnimationName 30s ease infinite;
+animation: AnimationName 30s ease infinite;
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:78% 0%}
+    50%{background-position:23% 100%}
+    100%{background-position:78% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:78% 0%}
+    50%{background-position:23% 100%}
+    100%{background-position:78% 0%}
+}
+@keyframes AnimationName {
+    0%{background-position:78% 0%}
+    50%{background-position:23% 100%}
+    100%{background-position:78% 0%}
+}
 }
 
 body,
@@ -66,7 +89,7 @@ section {
     -o-animation: fadein 2s;
     /* Opera < 12.1 */
     animation: fadein 2s;
-    padding: 10vw;
+    padding: $varWidth;
 }
 
 .content {
@@ -85,8 +108,8 @@ section {
     justify-content: flex-start;
     flex-direction: row;
     margin-top: 0;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: $varWidth;
+    margin-right: $varWidth;
     padding-left: 4vw;
     padding-right: 4vw;
     padding-top: 2.5vw;
@@ -133,8 +156,8 @@ article {
     font-size: 128px;
     /* color: rgba(255, 255, 255, 0.5); */
     margin-bottom: 0%;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: $varWidth;
+    margin-right: $varWidth;
     padding-left: 4vw;
     padding-right: 4vw;
     font-weight: bold;
@@ -155,59 +178,19 @@ header {
     /* background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%); */
     /* border-bottom: 4px rgb(0, 0, 0) solid; */
 
-    padding-top: 0px;
+    // padding-top: 0px;
     position: fixed;
     width: 100%;
     top: 0;
 
-    background: linear-gradient(270deg, rgba(0,0,0,0), rgba(0,0,0,0.5), rgba(0,0,0,0.75));
-    background-size: 600% 600%;
+    background: white;
 
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
-
-    @-webkit-keyframes AnimationName {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
-
-    @-moz-keyframes AnimationName {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
-
-    @keyframes AnimationName {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
+    margin: 0;
+  padding: 0;
+  width: 10%;
+  height: 100%; /* Full height */
+  position: fixed; /* Make it stick, even on scroll */
+  overflow: auto; /* Enable scrolling if the sidenav has too much content */
 }
 
 .headercontainer {
